--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <div class="container">
-        <h1 class="headline">💕 Happy Anniversary<span id="name"></span>! 💕</h1>
+        <h1 class="headline">💕 Happy <span id="year-text"></span>Anniversary<span id="name"></span>! 💕</h1>
+        <p id="milestone" class="milestone"></p>
         <p class="message">Celebrating your beautiful journey of love and togetherness!</p>
         <button class="btn" onclick="revealMessage()">Click for a Surprise!</button>
         <div class="surprise hidden">
